syntax = "proto3";
package TEngine.Network.Message;
import "CommonData.proto";


///进入游戏
message L2C_EnterGame // IMessage
{
	CharacterData characterData 	= 1;//角色详情数据
}


///更新游戏币
message L2C_UpdateCurrency // IMessage
{
	
}

///玩家属性更新
message L2C_PlayerNotifyUpdate // IMessage
{
	CharacterData characterData 	= 1;//角色详情数据
	int32 UpdateCase 				= 2;//角色更新枚举,0:全部,之后按照属性ID分段更新
}
